@@ -27,6 +27,8 @@ Version 0.6
 - added :attr:`BaseRequest.url_charset`
 - request and response objects have a default `__repr__` now.
 - builtin data structures are pickleable now.
+- the form data parser decides on the file to use based on the filename
+  now not on the content type.  This fixes a bug with Google Chrome.
 
 Version 0.5.1
 -------------
